@@ -21,6 +21,8 @@
     * IMPORTANT: 'verbose' is now by default at 1, set to 0 to not show any status messages.
     * IMPORTANT: $VIMPERATOR_HOME is no longer used.
 
+    * Selecting an <input type="file"> with hints now causes the commandline to prompt
+      for file input (instead of doing nothing).
     * [count]<C-n> now goes to the [count]th next tab rather than the [count]th tab.
     * add ~/.vimperator/info/{profile}/, similar to viminfo
     * add $VIMPERATOR_RUNTIME, $VIMPERATOR_INIT
